Updated build tool